Update UI and docs
